# webrtc-rs-node

./: .gitignore  Cargo.toml  declarations.d.ts  index.js  package-lock.json  package.json  tsconfig.json
app/: package-lock.json
app/public/: index.html
app/src/: App.tsx
example/: index.js  package.json
src/: lib.rs  main.rs
