[package]
name = "addon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = "3"
env_logger = "0.10.0"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.17"
napi = { version = "2", features = ["async"] }
napi-derive = "2"
serde_json = "1.0.92"
tokio = "1.25.0"
webrtc = { version = "0.6.0"}

[build-dependencies]
napi-build = "1"
